# SURFs_UP

./: .gitignore  PYTHONANYWHERE.md  README.md  pyproject.toml  pythonanywhere_update  surf_configuration_forecast.json  test.py  test_flask_app.py  wsgi.py
surfs_up/: __init__.py  gui.py
surfs_up/core/: __init__.py  codegen.py  models.py  plotting.py  runner.py
surfs_up/web/: __init__.py  app.py
surfs_up/web/templates/: index.html
tests/: test_core.py  test_web.py
